style remove unneeded syntax